[package]
name = "arcdps-bhud"
version = "0.3.1"
authors = ["Greaka <arcdps-bhud@greaka.de>"]
edition = "2018"

[dependencies]
smol = "0.1.10"
piper = "0.1.2"
futures = "0.3.5"
parking_lot = "0.10.2"
once_cell = "1.4.0"
protobuf = "2"

[dependencies.arcdps_bindings]
version = "0.1.7"
git = "https://github.com/greaka/arcdps_bindings"
# path = "../arcdps_bindings"

[dependencies.winapi]
version = "0.3.7"
features = ["ntdef", "minwindef"]

[build-dependencies]
protobuf-codegen-pure = "2"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
