[package]
name = "arcdps-bhud"
version = "0.3.1"
authors = ["Greaka <arcdps-bhud@greaka.de>"]
edition = "2018"

[dependencies]
arcdps = "0.8.0"
smol = "0.1.10"
piper = "0.1.2"
futures = "0.3.5"
parking_lot = "0.10.2"
once_cell = "1.4.0"

[dependencies.winapi]
version = "0.3.7"
features = ["ntdef", "minwindef"]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
