[package]
name = "arcdps-bhud"
version = "2.0.0"
authors = ["Greaka <arcdps-bhud@greaka.de>"]
edition = "2018"

[dependencies]
smol = "2.0.0"
async-broadcast = "0.7.1"
futures = "0.3.30"
bincode = "1.3.3"
log = "0.4.21"

[dependencies.arcdps]
version = "0.11.2"
features = ["serde"]

[dependencies.serde]
version = "1.0.203"
features = ["derive"]

[build-dependencies]
windows_exe_info = "0.4.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = 'thin'
strip = true
debug = true
